lab 5 (4 is pending)

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,9 @@ keras = "*"
 tensorflow = "*"
 ipykernel = "*"
 matplotlib = "*"
+tensorflow-probability = "*"
+tf-keras = "*"
+scikit-learn = "*"
 
 [dev-packages]
 
